<resources>
    <string name="app_name">智能资产管理</string>
    <string name="action_settings">Settings</string>

    <string name="activity_main">设备操作</string>
    <string name="activity_sync">数据同步</string>
    <string name="activity_find">查找</string>
    <string name="activity_asset_add">新增</string>
    <string name="activity_settings">设置</string>
    <string name="activity_power_setting">功率设置</string>
    <string name="activity_inventory">盘点</string>
    <string name="activity_inventory_detail">盘点列表详情</string>
    <string name="activity_inventory_start">开始盘点</string>
    <string name="create_name">操作人:%1$s</string>
    <string name="scan_count">共扫描到%1$6d条数据</string><!--%n$md：代表输出的是整数，n代表是第几个参数，设置m的值可以在输出之前放置空格-->
    <string name="action_scan">扫描</string>
    <string name="action_bind">绑定</string>
    <string name="action_commit">提交</string>
    <string name="current_power">当前功率%1$ddBm</string>
    <string name="inventory_people">盘点人:%1$s</string>
    <string name="inventory_task_process">任务已完成%1$d条/共%2$d条</string>
    <string name="find_asset_process">已盘到%1$d条/共%2$d条</string>
    <string name="activity_task_detail">任务详情</string>
    <string name="activity_task_start">处理任务</string>
    <string name="task_people">任务人:%1$s</string>
    <string name="task_process">任务已完成%1$d条/共%2$d条</string>
    <string name="activity_tasks">我的任务</string>
    <string name="activity_tasks_receive">领取</string>
    <string name="activity_tasks_borrow">借用</string>
    <string name="activity_tasks_allocation">调拨</string>
    <string name="activity_tasks_scarp">报废</string>
    <string name="activity_tasks_breakage">报损</string>
    <string name="activity_tasks_return">归还</string>
    <string name="tasks_handler">操作人:%1$s</string>
    <string name="task_scan_count">已扫描到%1$d条</string>
    <string name="task_applicant">申请人:%1$s</string>
    <string name="task_type">任务名称:%1$s</string>
    <string name="task_asset_type">资产类型:%1$s</string>
    <string name="task_asset_count">数量:%1$d</string>
    <string name="task_asset_keeper">保管人:%1$s</string>
    <string name="task_asset_repository">存放地点:%1$s</string>
    <string name="task_asset_return_data">归还日期:%1$s</string>
    <string name="task_check_count">实际数量:%1$d</string>


</resources>
