<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:theme="@style/AppTheme.AppBarOverlay" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/tasks_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/admin_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tasks_handler"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tasks_statistics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/admin_name"
                    android:text="@string/task_scan_count"
                    android:textStyle="bold" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:id="@+id/tasks_applicant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/task_applicant"
                        />

                    <TextView
                        android:id="@+id/task_asset_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/task_asset_type" />
                    <TextView
                        android:id="@+id/task_asset_keeper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/task_asset_keeper" />

                    <TextView
                        android:id="@+id/task_check_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/task_check_count" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/task_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/task_type" />
                    <TextView
                        android:id="@+id/task_asset_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/task_asset_count" />

                    <TextView
                        android:id="@+id/task_asset_repository"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/task_asset_repository" />
                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/layout_handle_tast_list_item_tip" />

            <ListView
                android:id="@+id/tasks_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:choiceMode="multipleChoice"
                android:layout_weight="1" />

            <com.dd.CircularProgressButton
                android:id="@+id/start_btn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:textColor="@color/cpb_white"
                android:textSize="16sp"
                app:cpb_cornerRadius="20dp"
                app:cpb_textIdle="扫描"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/noTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/noTasksIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_assignment_turned_in_24dp" />

            <TextView
                android:id="@+id/noTasksMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="改任务没有对应资产！" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>